data/negatives/20200528N/stoth68000.media-tree.ffa915d071ce4a05dcd866409df26513d25786f8
commit ffa915d071ce4a05dcd866409df26513d25786f8
Author: David S. Miller <davem@davemloft.net>
Date:   Wed May 27 00:19:03 2015 -0400

    ipv4: Fix fib_trie.c build, missing linux/vmalloc.h include.
    
    We used to get this indirectly I supposed, but no longer do.
    
    Either way, an explicit include should have been done in the
    first place.
    
       net/ipv4/fib_trie.c: In function '__node_free_rcu':
    >> net/ipv4/fib_trie.c:293:3: error: implicit declaration of function 'vfree' [-Werror=implicit-function-declaration]
          vfree(n);
          ^
       net/ipv4/fib_trie.c: In function 'tnode_alloc':
    >> net/ipv4/fib_trie.c:312:3: error: implicit declaration of function 'vzalloc' [-Werror=implicit-function-declaration]
          return vzalloc(size);
          ^
    >> net/ipv4/fib_trie.c:312:3: warning: return makes pointer from integer without a cast
       cc1: some warnings being treated as errors
    
    Reported-by: kbuild test robot <fengguang.wu@intel.com>
    Signed-off-by: David S. Miller <davem@davemloft.net>

diff --git a/net/ipv4/fib_trie.c b/net/ipv4/fib_trie.c
index 5a5d9bdeaeb4..01bce1506cd7 100644
--- a/net/ipv4/fib_trie.c
+++ b/net/ipv4/fib_trie.c
@@ -72,6 +72,7 @@
 #include <linux/list.h>
 #include <linux/slab.h>
 #include <linux/export.h>
+#include <linux/vmalloc.h>
 #include <net/net_namespace.h>
 #include <net/ip.h>
 #include <net/protocol.h>

